--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -245,6 +245,15 @@ p {
   color: $BLUE_COLOR;
 }
 
+.underLineBtn {
+  background-image: linear-gradient(transparent calc(100% - 1.5px), $BLUE_COLOR 5px);
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  &:hover {
+    animation: underLining 0.3s forwards;
+  }
+}
+
 @media only screen and (max-width: $sm) {
   html,
   body,
@@ -515,7 +524,7 @@ p {
   height: 370px;
 }
 
-.home_recommend_modal {
+.home_recommend_acm_modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -525,7 +534,7 @@ p {
   ul {
     margin: 1rem 0;
     .tag {
-      margin-right: 0.5rem;
+      margin: 1rem 0.5rem 1rem 0;
       cursor: default;
     }
   }
@@ -536,6 +545,73 @@ p {
       background-color: rgba(0, 0, 0, 0);
       color: black;
       text-decoration: underline;
+    }
+  }
+}
+
+.home_recommend_togo_modal {
+  position: absolute;
+  top: 2.5%;
+  left: 2.5%;
+  margin: 0;
+  width: 95%;
+  height: 95%;
+  overflow-y: auto;
+  .recommend {
+    &_container {
+      display: grid;
+      grid-template-rows: repeat(3, 32%);
+      grid-template-columns: repeat(3, 1fr);
+      height: 80%;
+      gap: 7px;
+    }
+    &_tags {
+      margin: 0.5rem 0;
+      li {
+        margin-right: 0.5rem;
+      }
+    }
+    &_card {
+      cursor: pointer;
+      position: relative;
+      transition: 0.4s all;
+      &:hover {
+        h4 {
+          opacity: 1;
+        }
+        .recommend_img {
+          opacity: 0.3;
+        }
+      }
+      .recommend_img {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+      }
+      h4 {
+        opacity: 0;
+        position: absolute;
+        width: 80%;
+        font-size: 0.9rem;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    &_submit_btn {
+      button {
+        font-size: 1.2rem;
+        font-weight: bold;
+        &:hover {
+          color: $BLUE_COLOR;
+        }
+      }
+    }
+    &_checked {
+      position: absolute;
+      top: 0;
+      right: 0;
     }
   }
 }
@@ -554,7 +630,7 @@ p {
     left: 8%;
     height: 370px;
   }
-  .home_recommend_modal {
+  .home_recommend_acm_modal {
     font-size: 0.8rem;
     width: 95%;
     top: 12%;
@@ -572,6 +648,24 @@ p {
     }
     .crown {
       width: 3rem;
+    }
+  }
+  .home_recommend_togo_modal {
+    top: 10%;
+    height: 70%;
+    .recommend {
+      &_container {
+        gap: 4px;
+      }
+      &_card {
+        h4 {
+          width: 100%;
+          font-size: 0.5rem;
+        }
+      }
+      &_checked {
+        width: 30%;
+      }
     }
   }
 }
@@ -621,7 +715,6 @@ header {
 .footer {
   position: fixed;
   width: 100%;
-  top: 3.438rem;
   transition: 0.4s all;
   padding: 1rem 1rem 2rem 1rem;
   right: 0;
@@ -641,12 +734,6 @@ header {
     font-size: 1rem;
     font-weight: bold;
     margin: 0.3rem 0 1rem 0;
-    background-image: linear-gradient(transparent calc(100% - 1.5px), $BLUE_COLOR 5px);
-    background-repeat: no-repeat;
-    background-size: 0% 100%;
-    &:hover {
-      animation: underLining 0.3s forwards;
-    }
   }
   @media only screen and (max-width: $sm) {
     &_list {
@@ -1042,12 +1129,6 @@ header {
       a {
         display: inline-block;
         margin-left: 1rem;
-        background-image: linear-gradient(transparent calc(100% - 1.5px), $BLUE_COLOR 5px);
-        background-repeat: no-repeat;
-        background-size: 0% 100%;
-        &:hover {
-          animation: underLining 0.3s forwards;
-        }
       }
     }
   }
