Created & Updated : Modal component , style

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -7,7 +7,8 @@ applet,
 object,
 iframe,
 h1,
-h4,
+h2,
+h3 h4,
 h5,
 h6,
 blockquote,
@@ -132,14 +133,6 @@ table {
 
 h1 {
   font-size: 4rem;
-  margin: 0;
-}
-
-h2,
-h3,
-h4,
-h5 {
-  margin: 0;
 }
 
 button {
@@ -162,16 +155,6 @@ a {
   text-decoration: none;
   outline: none;
   display: block;
-}
-
-a:hover,
-a:active {
-  text-decoration: none;
-  color: #1187cf;
-}
-
-p {
-  margin: 0;
 }
 
 .ant-divider {
@@ -400,138 +383,6 @@ p {
           align-items: center;
 }
 
-.home_landing {
-  position: relative;
-}
-
-.home_landing .slick-slider {
-  height: 100vh;
-  overflow: hidden;
-}
-
-.home_landing .slick-slider .landing_bg {
-  width: 100%;
-  height: 100vh;
-}
-
-.home_landing .landing_title {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  width: 100%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.home_landing .landing_title h1 {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  font-family: "Kaushan Script", cursive;
-  color: #fff;
-  text-align: center;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: linear-gradient(transparent calc(100% - 3px), #fff 5px);
-  background-repeat: no-repeat;
-  background-size: 0% 100%;
-}
-
-.home_landing .landing_title button {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #fff;
-}
-
-.home_landing .landing_title button:hover {
-  color: #1187cf;
-}
-
-@media only screen and (max-width: 768px) {
-  .home_landing .landing_title h1 {
-    font-size: 2.5rem;
-  }
-  .home_landing .landing_title button {
-    font-size: 1.5rem;
-  }
-}
-
-.checkList {
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  position: absolute;
-  top: 75%;
-  left: 50%;
-  width: 70%;
-  height: 370px;
-  overflow: auto;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-perspective: 300px;
-          perspective: 300px;
-  visibility: hidden;
-  -webkit-animation: flip 0.4s 0.8s forwards;
-          animation: flip 0.4s 0.8s forwards;
-  -webkit-box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.25);
-}
-
-.checkList_form {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 1.5rem;
-}
-
-.checkList_form h3 {
-  -webkit-transition: 0.3;
-  transition: 0.3;
-  background-image: linear-gradient(transparent calc(100% - 3px), #d21f3c 5px);
-  background-repeat: no-repeat;
-  background-size: 0% 100%;
-}
-
-.checkList_form h3 span {
-  margin-left: 5px;
-  color: #d21f3c;
-  font-size: 0.9rem;
-}
-
-.checkList_Box {
-  margin: 1rem 0 2rem 0;
-}
-
-.checkList_Box label {
-  margin: 0.5rem 1rem 0.5rem 0;
-}
-
-@media only screen and (max-width: 768px) {
-  .checkList {
-    height: 230px;
-    width: 90%;
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  .checkList {
-    width: 95%;
-  }
-  .checkList_form {
-    font-size: 0.8rem;
-  }
-}
-
 .main_page_wrapper {
   width: 100%;
 }
@@ -606,7 +457,7 @@ p {
   text-align: center;
 }
 
-.home_modal {
+.modal {
   background-color: #fff;
   border-radius: 5px;
   margin: 1rem;
@@ -615,196 +466,21 @@ p {
           box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
-.home_modal h4 {
+.modal h4 {
   line-height: 2;
   margin-bottom: 0.5rem;
 }
 
-.home_modal .ant-divider {
+.modal .ant-divider {
   margin: 0.5rem 0;
 }
 
-.home_modal span {
+.modal span {
   background-color: #ed6f63;
   border-radius: 5px;
   padding: 0.15rem 0.3rem;
   color: #fff;
   margin-right: 0.5rem;
-}
-
-.home_map_modal {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 620px;
-  height: 260px;
-}
-
-.home_menu_modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 500px;
-  height: 370px;
-}
-
-.home_recommend_acm_modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -60%);
-          transform: translate(-50%, -60%);
-  width: 90%;
-  height: 550px;
-}
-
-.home_recommend_acm_modal ul {
-  margin: 1rem 0;
-}
-
-.home_recommend_acm_modal ul .tag {
-  margin: 1rem 0.5rem 1rem 0;
-  cursor: default;
-}
-
-.home_recommend_acm_modal .modal_acm_box {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.home_recommend_acm_modal .modal_acm_box span {
-  background-color: rgba(0, 0, 0, 0);
-  color: black;
-  text-decoration: underline;
-}
-
-.home_recommend_togo_modal {
-  position: absolute;
-  top: 2.5%;
-  left: 2.5%;
-  margin: 0;
-  width: 95%;
-  height: 95%;
-  overflow-y: auto;
-}
-
-.home_recommend_togo_modal .recommend_container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (32%)[3];
-      grid-template-rows: repeat(3, 32%);
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  height: 80%;
-  gap: 7px;
-}
-
-.home_recommend_togo_modal .recommend_tags {
-  margin: 0.5rem 0;
-}
-
-.home_recommend_togo_modal .recommend_tags li {
-  margin-right: 0.5rem;
-}
-
-.home_recommend_togo_modal .recommend_card {
-  cursor: pointer;
-  position: relative;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-}
-
-.home_recommend_togo_modal .recommend_card:hover h4 {
-  opacity: 1;
-}
-
-.home_recommend_togo_modal .recommend_card:hover .recommend_img {
-  opacity: 0.3;
-}
-
-.home_recommend_togo_modal .recommend_card .recommend_img {
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
-}
-
-.home_recommend_togo_modal .recommend_card h4 {
-  opacity: 0;
-  position: absolute;
-  width: 80%;
-  font-size: 0.9rem;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.home_recommend_togo_modal .recommend_submit_btn button {
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-
-.home_recommend_togo_modal .recommend_submit_btn button:hover {
-  color: #1187cf;
-}
-
-.home_recommend_togo_modal .recommend_checked {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-@media only screen and (max-width: 576px) {
-  .home_map_modal {
-    width: 80%;
-    bottom: 10%;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-    margin: 0;
-  }
-  .home_menu_modal {
-    width: 85%;
-    top: 0;
-    left: 8%;
-    height: 370px;
-  }
-  .home_recommend_acm_modal {
-    font-size: 0.8rem;
-    width: 95%;
-    top: 12%;
-    left: 2.5%;
-    -webkit-transform: inherit;
-            transform: inherit;
-    height: 420px;
-    margin: 0;
-  }
-  .home_recommend_acm_modal .modal_acm_box span {
-    font-size: 1rem;
-  }
-  .home_recommend_acm_modal .modal_acm_box .card_title {
-    font-size: 1.2rem;
-  }
-  .home_recommend_acm_modal .crown {
-    width: 3rem;
-  }
-  .home_recommend_togo_modal {
-    top: 10%;
-    height: 70%;
-  }
-  .home_recommend_togo_modal .recommend_container {
-    gap: 4px;
-  }
-  .home_recommend_togo_modal .recommend_card h4 {
-    width: 100%;
-    font-size: 0.5rem;
-  }
-  .home_recommend_togo_modal .recommend_checked {
-    width: 30%;
-  }
 }
 
 header {
