--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -19,7 +19,8 @@ applet,
 object,
 iframe,
 h1,
-h4,
+h2,
+h3 h4,
 h5,
 h6,
 blockquote,
@@ -139,13 +140,6 @@ table {
 }
 h1 {
   font-size: 4rem;
-  margin: 0;
-}
-h2,
-h3,
-h4,
-h5 {
-  margin: 0;
 }
 button {
   transition: 0.5s;
@@ -163,14 +157,6 @@ a {
   text-decoration: none;
   outline: none;
   display: block;
-}
-a:hover,
-a:active {
-  text-decoration: none;
-  color: $BLUE_COLOR;
-}
-p {
-  margin: 0;
 }
 
 .ant-divider {
@@ -323,102 +309,11 @@ p {
   align-items: center;
 }
 .home_landing {
-  position: relative;
-  .slick-slider {
-    height: 100vh;
-    overflow: hidden;
-    .landing_bg {
-      width: 100%;
-      height: 100vh;
-    }
-  }
-  .landing_title {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    h1 {
-      transition: 0.3s;
-      font-family: "Kaushan Script", cursive;
-      color: $WHITE_COLOR;
-      text-align: center;
-      user-select: none;
-      background-image: linear-gradient(transparent calc(100% - 3px), $WHITE_COLOR 5px);
-      background-repeat: no-repeat;
-      background-size: 0% 100%;
-    }
-    button {
-      transition: 0.3s;
-      font-size: 2rem;
-      font-weight: bold;
-      color: $WHITE_COLOR;
-      &:hover {
-        color: $BLUE_COLOR;
-      }
-    }
-  }
-  @media only screen and (max-width: $md) {
-    .landing_title {
-      h1 {
-        font-size: 2.5rem;
-      }
-      button {
-        font-size: 1.5rem;
-      }
-    }
-  }
 }
 
 //======================= CheckListForm =====================
 
 .checkList {
-  transform: translate(-50%, -50%);
-  position: absolute;
-  top: 75%;
-  left: 50%;
-  width: 70%;
-  height: 370px;
-  overflow: auto;
-  transform-style: preserve-3d;
-  perspective: 300px;
-  visibility: hidden;
-  animation: flip 0.4s 0.8s forwards;
-  box-shadow: 10px 10px 30px $GRAY_COLOR;
-  &_form {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 1.5rem;
-    h3 {
-      transition: 0.3;
-      background-image: linear-gradient(transparent calc(100% - 3px), $RED_COLOR 5px);
-      background-repeat: no-repeat;
-      background-size: 0% 100%;
-      span {
-        margin-left: 5px;
-        color: $RED_COLOR;
-        font-size: 0.9rem;
-      }
-    }
-  }
-  &_Box {
-    margin: 1rem 0 2rem 0;
-    label {
-      margin: 0.5rem 1rem 0.5rem 0;
-    }
-  }
-  @media only screen and (max-width: $md) {
-    height: 230px;
-    width: 90%;
-  }
-  @media only screen and (max-width: $sm) {
-    width: 95%;
-    &_form {
-      font-size: 0.8rem;
-    }
-  }
 }
 
 //======================= MainPage =====================
@@ -486,7 +381,7 @@ p {
 
 //============================ MODAL ====================================
 
-.home_modal {
+.modal {
   background-color: $WHITE_COLOR;
   border-radius: 5px;
   margin: 1rem;
@@ -509,164 +404,25 @@ p {
 }
 
 .home_map_modal {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 620px;
-  height: 260px;
 }
 
 .home_menu_modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 500px;
-  height: 370px;
 }
 
 .home_recommend_acm_modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  width: 90%;
-  height: 550px;
-  ul {
-    margin: 1rem 0;
-    .tag {
-      margin: 1rem 0.5rem 1rem 0;
-      cursor: default;
-    }
-  }
-  .modal_acm_box {
-    width: 100%;
-    display: flex;
-    span {
-      background-color: rgba(0, 0, 0, 0);
-      color: black;
-      text-decoration: underline;
-    }
-  }
 }
 
 .home_recommend_togo_modal {
-  position: absolute;
-  top: 2.5%;
-  left: 2.5%;
-  margin: 0;
-  width: 95%;
-  height: 95%;
-  overflow-y: auto;
-  .recommend {
-    &_container {
-      display: grid;
-      grid-template-rows: repeat(3, 32%);
-      grid-template-columns: repeat(3, 1fr);
-      height: 80%;
-      gap: 7px;
-    }
-    &_tags {
-      margin: 0.5rem 0;
-      li {
-        margin-right: 0.5rem;
-      }
-    }
-    &_card {
-      cursor: pointer;
-      position: relative;
-      transition: 0.4s all;
-      &:hover {
-        h4 {
-          opacity: 1;
-        }
-        .recommend_img {
-          opacity: 0.3;
-        }
-      }
-      .recommend_img {
-        width: 100%;
-        height: 100%;
-        border-radius: 8px;
-      }
-      h4 {
-        opacity: 0;
-        position: absolute;
-        width: 80%;
-        font-size: 0.9rem;
-        text-align: center;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-    &_submit_btn {
-      button {
-        font-size: 1.2rem;
-        font-weight: bold;
-        &:hover {
-          color: $BLUE_COLOR;
-        }
-      }
-    }
-    &_checked {
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-  }
 }
 
 @media only screen and (max-width: $sm) {
   .home_map_modal {
-    width: 80%;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 0;
   }
   .home_menu_modal {
-    width: 85%;
-    top: 0;
-    left: 8%;
-    height: 370px;
   }
   .home_recommend_acm_modal {
-    font-size: 0.8rem;
-    width: 95%;
-    top: 12%;
-    left: 2.5%;
-    transform: inherit;
-    height: 420px;
-    margin: 0;
-    .modal_acm_box {
-      span {
-        font-size: 1rem;
-      }
-      .card_title {
-        font-size: 1.2rem;
-      }
-    }
-    .crown {
-      width: 3rem;
-    }
   }
   .home_recommend_togo_modal {
-    top: 10%;
-    height: 70%;
-    .recommend {
-      &_container {
-        gap: 4px;
-      }
-      &_card {
-        h4 {
-          width: 100%;
-          font-size: 0.5rem;
-        }
-      }
-      &_checked {
-        width: 30%;
-      }
-    }
   }
 }
 
