Updated: exchanged from SCSS to Styled-component til Map components

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -234,19 +234,13 @@ a {
           transform: scale(1.05);
 }
 
-.strong {
-  margin: 0 0.5rem;
-  font-weight: bold;
-  color: #1187cf;
-}
-
-.underLineBtn {
+.btn-underLine {
   background-image: linear-gradient(transparent calc(100% - 1.5px), #1187cf 5px);
   background-repeat: no-repeat;
   background-size: 0% 100%;
 }
 
-.underLineBtn:hover {
+.btn-underLine:hover {
   -webkit-animation: underLining 0.3s forwards;
           animation: underLining 0.3s forwards;
 }
@@ -369,94 +363,6 @@ a {
   }
 }
 
-.loadingPage {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.main_page_wrapper {
-  width: 100%;
-}
-
-.main_page_wrapper .main_wrapper {
-  height: calc(100vh - 59.26px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-}
-
-.main_page_wrapper .main_wrapper .main_content_wrapper {
-  width: 100%;
-  overflow: auto;
-  position: relative;
-}
-
-.main_page_wrapper .map_route {
-  height: 50%;
-  width: 100%;
-}
-
-.main_page_wrapper .map_acm {
-  height: 30%;
-  width: 100%;
-  -webkit-transition: 0.3s all;
-  transition: 0.3s all;
-}
-
-.main_page_wrapper .map_acm:hover {
-  height: 70%;
-}
-
-@media only screen and (max-width: 576px) {
-  .main_page_wrapper .map_route {
-    height: 55%;
-  }
-}
-
-.togo_preview {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 5px;
-  position: relative;
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  z-index: 1;
-  cursor: pointer;
-}
-
-.togo_preview h3 {
-  color: #1187cf;
-}
-
-.togo_preview span {
-  position: absolute;
-  font-size: 2rem;
-  bottom: -1rem;
-  left: -1rem;
-}
-
-.popup_togo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 200px;
-}
-
-.popup_togo a {
-  width: 50%;
-  text-align: center;
-}
-
 .modal {
   background-color: #fff;
   border-radius: 5px;
@@ -481,509 +387,6 @@ a {
   padding: 0.15rem 0.3rem;
   color: #fff;
   margin-right: 0.5rem;
-}
-
-header {
-  position: relative;
-  padding: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 61px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-header .header_logo {
-  color: black;
-  font-family: "Kaushan Script", cursive;
-  font-weight: bold;
-}
-
-header div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header div .settingIcon {
-  font-size: 1.2rem;
-  margin-left: 1rem;
-}
-
-header div .settingIcon a {
-  display: inline-block;
-}
-
-@media only screen and (max-width: 768px) {
-  header .header_logo {
-    font-size: 1.2rem;
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  header div .settingIcon {
-    margin-left: 1.5rem;
-  }
-  header div .settingIcon span {
-    font-size: 1.3rem;
-  }
-}
-
-.footer {
-  position: fixed;
-  width: 100%;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-  padding: 1rem 1rem 2rem 1rem;
-  right: 0;
-  background-color: #fff;
-  z-index: 1;
-  text-align: end;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.footer_list li {
-  display: inline-block;
-  margin-left: 0.8rem;
-  font-size: 1.5rem;
-}
-
-.footer_goback_btn {
-  display: inline-block;
-  font-size: 1rem;
-  font-weight: bold;
-  margin: 0.3rem 0 1rem 0;
-}
-
-@media only screen and (max-width: 576px) {
-  .footer_list li span {
-    font-size: 1.3rem;
-  }
-}
-
-.nav {
-  width: 320px;
-  height: 100vh;
-  font-size: 1.1rem;
-  background-color: #263238;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.nav .nav_menu_link {
-  padding: 1.5rem;
-  color: #fff;
-  background-color: #263238;
-}
-
-.nav .nav_menu_link:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-@media only screen and (max-width: 768px) {
-  .nav {
-    -webkit-transform: translateX(-100px);
-            transform: translateX(-100px);
-    width: 0px;
-    height: 100%;
-  }
-  .nav .nav_menu_link {
-    font-size: 1rem;
-  }
-}
-
-.offSubMenu {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  height: 0;
-}
-
-.onSubMenu {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  height: 100%;
-}
-
-.content_box {
-  padding: 2rem;
-  width: 100%;
-}
-
-.content_article_img {
-  border-radius: 10px;
-}
-
-.content_article_img img {
-  width: 100%;
-  height: 250px;
-  border-radius: 8px;
-}
-
-.content_article_text, .content_article_text_attractions {
-  padding-left: 1.5rem;
-  font-size: 0.9rem;
-  line-height: 2.2;
-  height: 250px;
-  overflow-y: auto;
-}
-
-.content_article_text p, .content_article_text_attractions p {
-  height: 250px;
-}
-
-.content_subtitle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.content_subtitle .addBtn {
-  cursor: pointer;
-  margin-left: 1rem;
-  -webkit-transition: 0.3s all;
-  transition: 0.3s all;
-}
-
-.content_top h2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 0.8rem;
-}
-
-.content_top h2 strong {
-  margin-right: 1rem;
-}
-
-.content_top h2 a {
-  font-family: "Kaushan Script", cursive;
-}
-
-.content_top ul .content_list {
-  display: inline-block;
-  margin-right: 1rem;
-}
-
-.content_top ul .content_tag {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  margin-right: 0.5rem;
-}
-
-.content_top ul .content_tag:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
-
-@media only screen and (max-width: 992px) {
-  .content_box {
-    padding: 1rem;
-  }
-  .content_article_text {
-    padding: 1rem 0 2rem 0;
-    height: 100%;
-  }
-  .content_article_text p {
-    height: 100%;
-  }
-  .content_article_text_attractions {
-    margin: 1rem 0 1.5rem 0;
-    padding: 0;
-    height: 150px;
-  }
-  .content_article_text_attractions p {
-    height: 100%;
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  .content_box h2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: 0;
-  }
-  .content_box h2 strong {
-    display: none;
-  }
-  .content_subtitle {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-  }
-  .content_subtitle ul .content_list {
-    display: none;
-  }
-  .content_subtitle ul .content_tag {
-    margin-top: 0.5rem;
-    font-size: 0.6rem;
-  }
-  .content_subtitle .addBtn {
-    display: none;
-  }
-  .content_subtitle h3 {
-    margin-top: 1rem;
-  }
-  .content_article_img img {
-    height: 150px;
-  }
-  .content_article_img button {
-    font-size: 0.9rem;
-    position: absolute;
-    bottom: 10px;
-    right: 5px;
-    background-color: #1187cf;
-    color: #fff;
-    display: inline-block;
-    padding: 0 0.5rem;
-    border-radius: 5px;
-    -webkit-transition: 0.3s all;
-    transition: 0.3s all;
-  }
-  .content_article_img button:hover {
-    color: black;
-    background-color: #fff;
-  }
-  .content_article_text {
-    padding: 0 0 1rem 0;
-    height: 100%;
-  }
-  .content_article_text p {
-    height: 100%;
-  }
-}
-
-.content_small_box {
-  position: relative;
-  padding: 1rem;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-  width: 100%;
-}
-
-.content_small_box h2 {
-  margin-bottom: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.content_small_box h2 .card_title {
-  font-family: "Kaushan Script", cursive;
-}
-
-.content_small_box h2 a:last-child {
-  font-size: 0.9rem;
-}
-
-.content_small_box .image_wrapper {
-  overflow: hidden;
-  border-radius: 10px;
-}
-
-.content_small_box .image_wrapper .place_img,
-.content_small_box .image_wrapper .airport_img {
-  width: 100%;
-  height: 175px;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
-  border-radius: 10px;
-}
-
-.content_small_box .crown {
-  position: absolute;
-  top: 3rem;
-  right: -1rem;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-.content_small_box:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.content_small_box:hover .place_img,
-.content_small_box:hover .airport_img {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
-
-.content_small_box .airport_title {
-  font-family: "Kaushan Script", cursive;
-  font-weight: bold;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-@media only screen and (max-width: 768px) {
-  .content_small_box h2 a {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  .content_small_box {
-    padding: 0.5rem;
-  }
-  .content_small_box h2 .card_title {
-    font-size: 0.8rem;
-  }
-  .content_small_box .image_wrapper .place_img,
-  .content_small_box .image_wrapper .airport_img {
-    height: 120px;
-  }
-}
-
-.route_content_header {
-  padding: 1rem;
-  font-size: 0.9rem;
-}
-
-.route_content_info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.route_content_info .route_title_from_name {
-  margin-right: 1rem;
-}
-
-.route_content_info .route_title_recm {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.route_content_info .route_title_recm_name {
-  margin: 0 0.5rem 0 1.5rem;
-}
-
-.route_content_info .route_title_recm ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.route_content_info .route_title_recm ul li {
-  margin: 0;
-}
-
-.route_content_info .ant-select-selection-item {
-  padding: 0 !important;
-}
-
-.route_content_info .ant-select-arrow {
-  display: none;
-}
-
-.route_content_info a {
-  margin-left: 0.5rem;
-}
-
-.route_content_info a:hover {
-  color: #fff;
-}
-
-@media only screen and (max-width: 576px) {
-  .route_content_header {
-    padding: 1rem;
-  }
-  .route_content_info {
-    display: block;
-  }
-  .route_content_info .route_title_from_name {
-    margin-right: 1rem;
-  }
-  .route_content_info .route_title_recm {
-    margin-top: 1.5rem;
-  }
-  .route_content_info .route_title_recm_name {
-    margin: 0 0.5rem 0 0;
-  }
-  .route_content_info .route_title_recm ul li {
-    margin-right: 0.5rem;
-  }
-  .route_content_info ul {
-    display: inline-block;
-  }
-  .route_content_info ul li {
-    margin: 0.5rem 0.5rem 0 0;
-  }
-  .route_content_info ul li .tag {
-    margin: 0;
-  }
-}
-
-.route_btn {
-  position: absolute;
-  z-index: 1;
-  top: -3rem;
-  font-size: 1.5rem;
-}
-
-.route_btn_prev {
-  right: 3rem;
-}
-
-.route_btn_prev:hover {
-  color: #1187cf;
-}
-
-.route_btn_next {
-  right: 1rem;
-}
-
-.route_btn_next:hover {
-  color: #1187cf;
-}
-
-@media only screen and (max-width: 576px) {
-  .route_btn {
-    display: none;
-  }
 }
 
 .analyzer_budget {
